# spotify-dbus-enhancer

./: .gitignore  LICENSE  README.md  default.nix  devenv.nix  flake.nix  hm.nix  meson.build  spotify-notifix  spotify-notifix.py
src/: BasicMessageListener.vala  BasicNotificationListener.vala  MessageListener.vala  NotificationListener.vala  NotifyCall.vala  SessionBusAdapter.vala  VariantUtils.vala  main.vala
src/domain/: NotifyCall.vala
src/foreign/: INotifications.vala
src/foreign/mpris/: IPlayer.vala
src/listeners/: BasicMessageListener.vala  BasicNotificationListener.vala  MessageListener.vala  NotificationListener.vala  SpotifyNotificationListener.vala
